# backend/apiServer/models/PanCard.js
@@ -2,26 +2,18 @@ const mongoose = require('mongoose');
 const schema = mongoose.Schema;
 const { String, ObjectId } = mongoose.Schema.Types;
 
-const userSchema = new schema({
+const panCard = new schema({
     firstName: String,
     lastName: String,
     fatherName:String,
     Nationality: String,
-    email: String,
-    password: String,
     phoneNumber: String,
+    email:String,
     gender:String,
     address:String,
     DOB:String,
-    role: String,
-    OrgMSP:String,
-    status: String,
     panCard:String,
-    aadharCard: String,    
-    phoneOtp:String,
-    role: String,
-    nse_registerd:Boolean,
-    createdBy: { type: ObjectId, ref: 'User' }
+    aadharCard: String,   
 }, { timestamps: true });
 
-module.exports = mongoose.model('User', userSchema);
+module.exports = mongoose.model('PanCard', panCard);
